Refactor rudimentary UI

--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -1,132 +1,13 @@
-<%= form_with model: @composition, url: "/", method: :get, id: "data-explorer" do |form| %>
+<%= form_with model: @composition, url: "/", method: :get, id: "data-explorer", data: { controller: "data-explorer--composition-url", action: "data-explorer--composition-url#goto" } do |form| %>
   <div id="global-data-parameters">
-    <fieldset>
-      <legend>Composition Errors</legend>
+    <p><a href="/">Home</a></p>
+    <p><a href="/data-explorer"><%= current_user_name %></a></p>
 
+    <%= render "data_explorer/composition_errors" %>
 
-      <ul>
-        <% @composition.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
+    <%= render partial: "data_explorer/range_chooser", locals: {form: form} %>
 
-        <% @composition.filters&.each do |filter| %>
-          <% filter.errors.full_messages.each do |msg| %>
-            <li><%= filter.dimension %> filter: <%= msg %></li>
-          <% end %>
-        <% end %>
-
-        <% @composition.try(:metrics)&.each do |metric| %>
-          <% metric.errors.full_messages.each do |msg| %>
-            <li><%= metric.metric %> metric: <%= msg %></li>
-          <% end %>
-        <% end %>
-
-        <% @composition.try(:groups)&.each do |group| %>
-          <% group.errors.full_messages.each do |msg| %>
-            <li><%= group.dimension %> group: <%= msg %></li>
-          <% end %>
-        <% end %>
-      </ul>
-    </fieldset>
-
-    <fieldset id="range">
-      <legend>Time Range</legend>
-
-      <%= form.label :from, "From" %><%= form.text_field :from, name: "from" %>
-      <br>
-      <%= form.label :to, "To" %><%= form.text_field :to, name: "to" %>
-
-      <ul>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = '2023-01-01';document.querySelector('input[name=to]').value = '2023-02-01';">Jan 2023</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-48h';document.querySelector('input[name=to]').value = 'now';">Last 48 hours</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-48/h';document.querySelector('input[name=to]').value = 'now-1/h';">Previous 48 hours</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-1/W';document.querySelector('input[name=to]').value = 'now-1/W';">Previous week</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-1/W+1D';document.querySelector('input[name=to]').value = 'now-1/W-1D';">M-F Previous week</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-1/M';document.querySelector('input[name=to]').value = 'now-1/M';">Previous month</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now/M';document.querySelector('input[name=to]').value = 'now/M';">This month</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now/M';document.querySelector('input[name=to]').value = 'now';">This month so far</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-90/D';document.querySelector('input[name=to]').value = 'now-1/D';">Previous 90 days</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-1/Q';document.querySelector('input[name=to]').value = 'now-1/Q';">Previous quarter</a></li>
-        <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now/Y';document.querySelector('input[name=to]').value = 'now/Y';">This year</a></li>
-      </ul>
-    </fieldset>
-
-    <fieldset>
-      <legend>Current Time Range</legend>
-      <p>From: <%= @composition.abs_from %></p>
-      <p>To: <%= @composition.abs_to %></p>
-    </fieldset>
-
-    <fieldset id="filters">
-      <legend>Filters</legend>
-
-      <ul>
-        <% DataSchema.dimensions.each do |dimension_name, dimension_def| %>
-          <% dim_key = dimension_def["QueryKey"] || dimension_name %>
-
-          <%# Look for an existing Filter instance for this dimension – it may not exist %>
-          <% filter = @composition.filters&.find { |f| f.dimension == dimension_name.to_sym } %>
-          <li>
-            <fieldset
-              data-dimension-type="<%= dimension_def["Type"] %>"
-              <%= html_attributes(class: "active") if filter.try(:valid?) %>>
-
-              <legend><%= dim_key %></legend>
-
-              <select class="operator <%= "field_with_errors" if filter&.errors&.include?(:operator) %>" name="filter.<%= dim_key %>">
-                <option></option>
-                <option value="include" <%= html_attributes(selected: "selected") if params["filter.#{dim_key}"] == "include" %>>Include</option>
-                <option value="exclude" <%= html_attributes(selected: "selected") if params["filter.#{dim_key}"] == "exclude" %>>Exclude</option>
-              </select>
-
-              <% if ["Token", "String"].include? dimension_def["Type"] %>
-                <br>
-                <label for="filter.<%= dim_key %>.values">Values:</label>
-                <input autocomplete="off" class="value <%= "field_with_errors" if filter&.errors&.include?(:values) %>" type="text" placeholder="Apple, Banana, Cherry" id="filter.<%= dim_key %>.values" name="filter.<%= dim_key %>.values" value="<%= params["filter.#{dim_key}.values"] %>">
-              <% elsif ["Duration"].include? dimension_def["Type"] %>
-                <br>
-                <label for="filter.<%= dim_key %>.from">From:</label>
-                <input autocomplete="off" class="gte" type="text" placeholder="42" id="filter.<%= dim_key %>.gte" name="filter.<%= dim_key %>.gte" value="<%= params["filter.#{dim_key}.gte"] %>">
-
-                <br>
-                <label for="filter.<%= dim_key %>.to">To:</label>
-                <input autocomplete="off" class="lt" type="text" placeholder="1066" id="filter.<%= dim_key %>.lt" name="filter.<%= dim_key %>.lt" value="<%= params["filter.#{dim_key}.lt"] %>">
-              <% elsif ["Timestamp"].include? dimension_def["Type"] %>
-                <br>
-                <select class="timestamp-mode">
-                  <option value="Range">Range</option>
-                  <option value="Extract">Extract</option>
-                </select>
-
-                <div class="range">
-                  <label for="filter.<%= dim_key %>.from">From:</label>
-                  <input autocomplete="off" class="from" type="text" placeholder="2024-01-01" id="filter.<%= dim_key %>.from" name="filter.<%= dim_key %>.from" value="<%= params["filter.#{dim_key}.from"] %>">
-
-                  <br>
-                  <label for="filter.<%= dim_key %>.to">To:</label>
-                  <input autocomplete="off" class="to" type="text" placeholder="2024-07-01" id="filter.<%= dim_key %>.to" name="filter.<%= dim_key %>.to" value="<%= params["filter.#{dim_key}.to"] %>">
-                </div>
-
-                <div class="extract">
-                  <select name="filter.<%= dim_key %>.extract">
-                    <option>hour</option>
-                    <option>day of week</option>
-                    <option>day</option>
-                    <option>week</option>
-                    <option>month</option>
-                    <option>year</option>
-                  </select>
-
-                  <br>
-                  <label for="filter.<%= dim_key %>.values">Values:</label>
-                  <input autocomplete="off" class="value" type="text" placeholder="Friday, Saturday" id="filter.<%= dim_key %>.values" name="filter.<%= dim_key %>.values" value="<%= params["filter.#{dim_key}.values"] %>">
-                </div>
-              <% end %>
-            </fieldset>
-          </li>
-        <% end %>
-      </ul>
-    </fieldset>
+    <%= render "data_explorer/filters_panel" %>
   </div>
 
   <div id="lens">
@@ -137,14 +18,15 @@
         <% [Compositions::DimensionalComposition, Compositions::TimeSeriesComposition].each do |lens| %>
           <% lens_type = "#{lens.query_value}" %>
           <label for="lens-<%= lens_type %>"><%= lens_type %></label>
-          <input type="radio" name="lens" id="lens-<%= lens_type %>" value="<%= lens_type %>" <%= html_attributes(checked: "checked") if params[:lens] == lens_type %>>
+          <%# TODO Don't use `params` for `checked` %>
+          <input type="radio" name="lens" id="lens-<%= lens_type %>" data-data-explorer--composition-url-target="lens" value="<%= lens_type %>" <%= html_attributes(checked: "checked") if params[:lens] == lens_type %>>
         <% end %>
       </fieldset>
 
       <fieldset id="granularity">
         <legend>Time Series Options</legend>
 
-        <select name="granularity">
+        <select name="granularity" data-data-explorer--composition-url-target="granularity">
           <% ["daily", "weekly", "monthly", "quarterly", "yearly", "rolling"].each do |g| %>
             <option <%= html_attributes(selected: "selected") if @composition.try(:granularity).to_s == g %> value="<%= g %>"><%= g %></option>
           <% end %>
@@ -169,7 +51,10 @@
             <input name="<%= metric_name %>.variables" placeholder="e.g., '7' or '7, 14, 30'" <%= html_attributes(value: (all_variables||[]).map {|m| m.variable}.join(", ")) %>>
           <% else %>
             <% checked = @composition.try(:metrics) && @composition.metrics.find {|m| m.metric == metric_name.to_sym } %>
-            <label><input type="checkbox" value="<%= metric_name %>" <%= html_attributes(checked: "checked") if checked %>> <%= metric_name %></label>
+            <label>
+              <input type="checkbox" data-data-explorer--composition-url-target="metric" <%= html_attributes(value: metric_name) %> <%= html_attributes(checked: "checked") if checked %>>
+              <%= metric_name %>
+            </label>
           <% end %>
         <% end %>
       </fieldset>
@@ -178,56 +63,11 @@
         <legend>Groups</legend>
 
         <% [1,2].each do |i| %>
-        <% idx = i - 1 %>
-        <fieldset>
-          <legend>Group <%= i %></legend>
-
-          <label for="group.<%= i %>">Group By</label>
-          <select id="group.<%= i %>" name="group.<%= i %>">
-            <option value=""></option>
-
-            <% DataSchema.dimensions.each do |dimension_name, dimension_def| %>
-              <% dim_key = dimension_def["QueryKey"] || dimension_name %>
-              <option data-dimension-type="<%= dimension_def["Type"] %>" value="<%= dim_key %>" <%= html_attributes(selected: "selected") if params["group.#{i}"] == dim_key %>><%= dim_key %></option>
-            <% end %>
-          </select>
-
-          <div class="timestamp">
-            <select class="waffle">
-              <option value="range">Range</option>
-              <option value="truncate" <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.truncate %>>Truncate</option>
-              <option value="extract" <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.extract %>>Extract</option>
-            </select>
-
-            <div class="range">
-              Ranges: <input name="XXXXgroup.<%= i %>.temp_indexes">
-            </div>
-
-            <select class="extract" name="group.<%= i %>.extract">
-              <option></option>
-
-              <% %w(hour dayofweek day week month year).each do |part| %>
-                <option <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.extract == part %>><%= part %></option>
-              <% end %>
-            </select>
-
-            <select class="truncate" name="group.<%= i %>.truncate">
-              <option></option>
-
-              <% %w(week month year).each do |part| %>
-                <option <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.truncate == part %>><%= part %></option>
-              <% end %>
-            </select>
-          </div>
-
-          <div class="duration">
-            Ranges: <input name="group.<%= i %>.temp_indexes" <%= html_attributes(value: @composition.try(:groups)&.values_at(idx)&.first&.indices&.join(", ")) %>>
-          </div>
-        </fieldset>
+          <%= render partial: "data_explorer/dimensional/group_chooser", locals: {i: i} %>
         <% end %>
       </fieldset>
 
-      <fieldset id="time-series-compare">
+      <fieldset id="time-series-compare" data-data-explorer--composition-url-target="compare">
         <legend>Time Series Compare</legend>
 
         <% compare = @composition.try(:comparisons)&.first %>
@@ -266,5 +106,5 @@
     </div>
   </div>
 
-  <%= form.submit "Submit" %>
+  <input type="submit" value="Explore">
 <% end %>
