--- a/app/views/data_explorer/dimensional/_group_chooser.html.erb
+++ b/app/views/data_explorer/dimensional/_group_chooser.html.erb
@@ -9,7 +9,7 @@
   data-data-explorer--composition-url-target="groupChooser">
   <legend>Group <%= i %></legend>
 
-  <label <%= html_attributes(for: "group-#{i}") %>>Group By</label>
+  <label <%= html_attributes(for: "group.#{i}") %>>Group By</label>
   <select class="dimension" <%= html_attributes(id: "group.#{i}", name: "group.#{i}") %> data-action="data-explorer--group-chooser#do">
     <option value=""></option>
 
@@ -27,27 +27,52 @@
   <div class="timestamp" data-data-explorer--composition-url-target="rangesBuilder">
     <select class="waffle" <%= html_attributes(name: "group.#{i}.timestamp-mode") %>>
       <option value="range">Range</option>
-      <option value="truncate" <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.truncate %>>Truncate</option>
-      <option value="extract" <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.extract %>>Extract</option>
+      <option value="truncate" <%= html_attributes(selected: "selected") if group&.truncate %>>Truncate</option>
+      <option value="extract" <%= html_attributes(selected: "selected") if group&.extract %>>Extract</option>
     </select>
 
-    <div class="range">
-      Ranges: <input name="XXXXgroup.<%= i %>.temp_indexes">
+    <div class="range duration-ranges" data-data-explorer--group-chooser-target="durationRangesBuilder">
+      Ranges:
+      <a href="#" data-action="data-explorer--group-chooser#addRange">Add range</a>
+
+      <% indices = group&.indices %>
+
+      <ul>
+        <li>Less than: <input type="text" autocomplete="off" data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: to_duration_shorthand(indices.first)) if indices.try(:first) %>></li>
+
+        <% if indices && indices.size > 1 %>
+          <% i = 0 %>
+          <% while i < indices.size - 1 do %>
+            <li>Greater Than Or Equal To: <input disabled <%= html_attributes(value: indices[i]) %>> and less than <input data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: indices[i+1]) %>> <a href="#" data-action="data-explorer--group-chooser#removeRange">X</a></li>
+            <% i += 1 %>
+          <% end %>
+        <% end %>
+
+        <li>Greater than or equal to: <input type="text" disabled autocomplete="off" <%= html_attributes(value: indices.last) if indices.try(:last) %>></li>
+      </ul>
     </div>
 
     <select class="extract" <%= html_attributes(name: "group.#{i}.extract") %>>
       <option></option>
 
-      <% %w(hour dayofweek day week month year).each do |part| %>
-        <option <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.extract == part %>><%= part %></option>
+      <% unless Compositions::Components::Group::EXTRACT_OPTS.include?(group&.extract) %>
+        <option selected><%= group&.extract %></option>
+      <% end %>
+
+      <% Compositions::Components::Group::EXTRACT_OPTS.each do |part| %>
+        <option <%= html_attributes(value: part) %> <%= html_attributes(selected: "selected") if group&.extract == part %>><%= part.to_s.humanize %></option>
       <% end %>
     </select>
 
     <select class="truncate" <%= html_attributes(name: "group.#{i}.truncate") %>>
       <option></option>
 
-      <% %w(week month year).each do |part| %>
-        <option <%= html_attributes(selected: "selected") if @composition.try(:groups)&.values_at(idx)&.first&.truncate == part %>><%= part %></option>
+      <% unless Compositions::Components::Group::TRUNCATE_OPTS.include?(group&.truncate) %>
+        <option selected><%= group&.truncate %></option>
+      <% end %>
+
+      <% Compositions::Components::Group::TRUNCATE_OPTS.each do |part| %>
+        <option <%= html_attributes(value: part) %> <%= html_attributes(selected: "selected") if group&.truncate == part %>><%= part.to_s.humanize %></option>
       <% end %>
     </select>
   </div>
@@ -56,7 +81,7 @@
     Ranges:
     <a href="#" data-action="data-explorer--group-chooser#addRange">Add range</a>
 
-    <% indices = @composition.try(:groups)&.values_at(idx)&.first&.indices %>
+    <% indices = group&.indices %>
 
     <ul>
       <li>Less than: <input type="text" autocomplete="off" data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: to_duration_shorthand(indices.first)) if indices.try(:first) %>></li>
