--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -4,6 +4,7 @@
     <p><a href="/data-explorer"><%= current_user_name %></a></p>
 
     <%= render "data_explorer/composition_errors" %>
+    <%= render "data_explorer/composition_warnings" unless @composition.safe? %>
 
     <%= render partial: "data_explorer/range_chooser", locals: {form: form} %>
 
