--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -35,7 +35,7 @@
 
         <fieldset id="window">
           <%= form.label :window, "Window" %>
-          <%= form.text_field :window, name: "window", class: "foo" %>
+          <%= form.text_field :window, name: "window", class: "foo", value: to_duration_shorthand(@composition.try(:window)), data: {"data-explorer--composition-url-target": "granularityWindow"} %>
         </fieldset>
       </fieldset>
 
