--- a/app/views/data_explorer/time_series/_results.html.erb
+++ b/app/views/data_explorer/time_series/_results.html.erb
@@ -1,4 +1,4 @@
-<table data-controller="data-explorer--results-table-highlight" data-data-explorer--results-table-highlight-target="table">
+<table data-data-explorer--results-table-highlight-target="table">
   <colgroup>
     <%# Group 1 member labels %>
     <col>
