--- a/app/views/data_explorer/dimensional/_results.html.erb
+++ b/app/views/data_explorer/dimensional/_results.html.erb
@@ -16,7 +16,7 @@
 # 4. Cells for each metric where group 2 is NULL
 %>
 
-<table data-controller="data-explorer--results-table-highlight" data-data-explorer--results-table-highlight-target="table">
+<table data-data-explorer--results-table-highlight-target="table">
   <colgroup>
     <%# Group 1 member labels %>
     <col>
