--- a/app/views/data_explorer/time_series/results/table/_group_rows.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_group_rows.html.erb
@@ -57,7 +57,8 @@
 
             <% value = @composition.results.get_value(metric, granularity_member, group_1_member, group_2_member) %>
 
-            <td <%= html_attributes("data-highlight-group": metric.metric) %>
+            <td
+              <%= html_attributes("data-highlight-metric": metric.metric, "data-highlight-granularity": granularity_member, "data-highlight-group-1": group_1_member, "data-highlight-group-2": group_2_member) %>
               <%= html_attributes("data-raw-value": value) %>>
               <%= number_with_delimiter(value) %>
             </td>
@@ -96,8 +97,9 @@
 
         <% value = @composition.results.get_value(metric, granularity_member, group_1_member, nil) %>
 
-        <td <%= html_attributes("data-raw-value": value) %>
-          <%= html_attributes("data-highlight-group": "tktk") %>>
+        <td
+          <%= html_attributes("data-highlight-metric": metric.metric, "data-highlight-granularity": granularity_member, "data-highlight-group-1": group_1_member, "data-highlight-group-2": "__nil__") %>
+          <%= html_attributes("data-raw-value": value) %>>
           <%= number_with_delimiter(value) %>
         </td>
       <% end %>
