Add preset range with time

--- a/app/views/data_explorer/_range_chooser.html.erb
+++ b/app/views/data_explorer/_range_chooser.html.erb
@@ -7,6 +7,7 @@
 
   <ul>
     <li><a href="#" onclick="document.querySelector('input[name=from]').value = '2023-01-01';document.querySelector('input[name=to]').value = '2023-02-01';">Jan 2023</a></li>
+    <li><a href="#" onclick="document.querySelector('input[name=from]').value = '2024-12-25T06:00:00Z';document.querySelector('input[name=to]').value = '2024-12-25T12:00:00Z';">Christmas morning</a></li>
     <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-48h';document.querySelector('input[name=to]').value = 'now';">Last 48 hours</a></li>
     <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-48/h';document.querySelector('input[name=to]').value = 'now-1/h';">Previous 48 hours</a></li>
     <li><a href="#" onclick="document.querySelector('input[name=from]').value = 'now-1/W';document.querySelector('input[name=to]').value = 'now-1/W';">Previous week</a></li>
