--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,6 +176,17 @@ form:has(#granularity select[name=granularity] option[value=quarterly]:checked) 
   }
 }
 
+#export-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  border: 4px solid red;
+  background: rebeccapurple;
+  color: white;
+  padding: 10px;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
